# hardbound

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  INTERACTIVE_ENHANCEMENT_PLAN.md  LICENSE  Makefile  PERFORMANCE_OPTIMIZATION.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_2_PROGRESS.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  README.md  RED_PATH_SPEC.md  TEST_IMPROVEMENT_PLAN.md  TEST_PROGRESS_REPORT.md  TYPE_ANNOTATION_PLAN.md  hardbound.py  hardbound_enhanced.py  process_mushoku.sh  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  search_history.txt  setup.py  test.py  test_interactive_red.py  test_priority_summary.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
hardbound/: __init__.py  catalog.py  commands.py  config.py  display.py  interactive.py  linker.py  py.typed  red_paths.py
hardbound/ui/: __init__.py  feedback.py  menu.py  progress.py
hardbound/utils/: __init__.py  formatting.py  logging.py  timing.py  validation.py
scripts/: bootstrap.ps1  bootstrap.sh
tests/: __init__.py  conftest.py  test_catalog_fts.py  test_catalog_indexing.py  test_catalog_parsing.py  test_catalog_schema.py  test_commands_main.py  test_commands_utils.py  test_config.py  test_display.py  test_integration.py  test_interactive_core.py  test_interactive_wizards.py  test_linker.py  test_linker_core.py  test_linker_red.py  test_linker_utils.py  test_main.py  test_red_paths.py
